Integration test and postman verification is done